# game_logicprogramming

./: README.md  main.hs  reversi-hs.cabal  reversi.hs  reversi.pl  start.bat
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
public/: game.js  index.html  style.css
