cabal-version:      3.0
name:               reversi-hs
version:            0.1.0.0
build-type:         Simple

executable reversi-hs
  main-is:          Main.hs
  hs-source-dirs:   .
  other-modules:    Reversi
  default-language: GHC2021
  ghc-options:      -Wall

  build-depends:
      base >=4.18 && <5,
      array,
      aeson,
      scotty,
      wai-middleware-static,
      http-types